--- a/AUTHORS
+++ b/AUTHORS
@@ -17,6 +17,8 @@ dokumentacja projektu, opiekun t³umaczeñ
 Pawe³ P³uciennik <pawel_p (at) kadu (dot) net>
 programista
 
+Micha³ Podsiadlik <michal (at) kadu (dot) net>
+programista
 
  Autorzy Kadu - ludzie nie wspieraj±cy ju¿ aktywnie projektu
 =============================================================
