--- a/ChangeLog
+++ b/ChangeLog
@@ -130,6 +130,9 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
   klawisza w oknie chat (adrian)
 * zaaplikowana latka michala dodajaca w autoaway uniwersalna metode wykrywania
   ruchu myszy (adrian)
+* zapamiêtywanie rozmiaru okien: konfiguracji i historii (joi)
+* poprawka w³±czania/wy³±czania d¼wiêków (joi)
+* poprawki zwi±zane z popup menu listy kontaktów (joi)
 
 +++ wersja 0.3.7 (03.02.2004)
 * poprawka podpinania siê pod sygna³ dccFinished() (chilek)
