*** empty log message ***
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@1857 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/AUTHORS
+++ b/AUTHORS
@@ -17,6 +17,9 @@ dokumentacja projektu, opiekun t³umaczeñ
 Pawe³ P³uciennik <pawel_p (at) kadu (dot) net>
 programista
 
+Marcin ¦lusarz <mslusarz (at) alan (dot) umcs (dot) lublin (dot) pl>
+programista
+
 Micha³ Podsiadlik <michal (at) kadu (dot) net>
 programista
 
