dostęp z zewnątrz do odgrywania dowolnych dźwięków
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@1860 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/ChangeLog
+++ b/ChangeLog
@@ -135,6 +135,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * poprawki zwi±zane z popup menu listy kontaktów (joi)
 * patch Googiego dot. sygna³u emitowanego przy naci¶niêciu przycisku w oknie
   chat + drobna przeróbka (joi)
+* dana mo¿liwo¶æ odrywania dodatkowych d¼wiêków innym modu³om (joi)
 
 +++ wersja 0.3.7 (03.02.2004)
 * poprawka podpinania siê pod sygna³ dccFinished() (chilek)
