--- a/ChangeLog
+++ b/ChangeLog
@@ -140,6 +140,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
   {plik tekst} - je¿eli plik istnieje, to jest wstawiany "tekst",
   {~plik tekst} - je¿eli plik nie istnieje, to jest wstawiany "tekst" (joi)
 * instalacja naglowkow modulow do $PREFIX/include/kadu/modules (adrian)
+* instalacja pliku kadu-config.h do $PREFIX/include/kadu (adrian)
 
 +++ wersja 0.3.7 (03.02.2004)
 * poprawka podpinania siê pod sygna³ dccFinished() (chilek)
