--- a/ChangeLog
+++ b/ChangeLog
@@ -141,7 +141,9 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
   {~plik tekst} - je¿eli plik nie istnieje, to jest wstawiany "tekst" (joi)
 * instalacja naglowkow modulow do $PREFIX/include/kadu/modules (adrian)
 * instalacja pliku kadu-config.h do $PREFIX/include/kadu (adrian)
-
+* w oknie konfiguracyjnym opcje moze byc zapisywane do alternatywnych
+  plikow (michal)
+ 
 +++ wersja 0.3.7 (03.02.2004)
 * poprawka podpinania siê pod sygna³ dccFinished() (chilek)
 * okno konfiguracji: mo¿liwo¶æ wy³±czenia zmian statusu w historii (demsik/chilek)
