usuwanie polskich ogonków przy eksporcie listy kontaktów na serwer
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@1869 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/ChangeLog
+++ b/ChangeLog
@@ -146,6 +146,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * loginparams.has_audio = 1, gdy mamy DCC w³±czone; przedstawiamy siê jako wersja
   gg 6.0.0.132 (chilek)
 * w opcjach powiadamiania mozna wybierac wielu uzytkownikow (michal)
+* usuwanie polskich ogonków przy eksporcie listy kontaktów na serwer (chilek)
 
 +++ wersja 0.3.7 (03.02.2004)
 * poprawka podpinania siê pod sygna³ dccFinished() (chilek)
