--- a/ChangeLog
+++ b/ChangeLog
@@ -150,6 +150,8 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * zaaplikowana poprawka - wojtekka - kompatybilnosci z shellem sh (adrian)
 * prace nad statycznymi modulami: lista tych modulów w pliku kadu-config.h,
   najpierw kompiluj± siê modu³y a potem j±dro kadu (adrian)
+* linkowanie plikow ".a" statycznych modulów do binarki kadu (adrian)
+* zale¿no¶æ kompilacji modu³ów od kadu-config.h i kadu/*.h (adrian)
 
 +++ wersja 0.3.7 (03.02.2004)
 * poprawka podpinania siê pod sygna³ dccFinished() (chilek)
