uaktualnianie panela informacyjnego
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@1873 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/ChangeLog
+++ b/ChangeLog
@@ -152,6 +152,8 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
   najpierw kompiluj± siê modu³y a potem j±dro kadu (adrian)
 * linkowanie plikow ".a" statycznych modulów do binarki kadu (adrian)
 * zale¿no¶æ kompilacji modu³ów od kadu-config.h i kadu/*.h (adrian)
+* podczas przeszukiwania listy kontaktow za pomoca klawiatury jest
+  uaktualniany panel informacyjny (michal)
 
 +++ wersja 0.3.7 (03.02.2004)
 * poprawka podpinania siê pod sygna³ dccFinished() (chilek)
