--- a/ChangeLog
+++ b/ChangeLog
@@ -155,6 +155,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * podczas przeszukiwania listy kontaktow za pomoca klawiatury jest
   uaktualniany panel informacyjny (michal)
 * dalsze porz±dki w przekazywaniu parametrów funkcji gg_login(...) (chilek)
+* nie wysy³amy dwóch zmian statusu przy statusie opisowym (chilek)
 
 +++ wersja 0.3.7 (03.02.2004)
 * poprawka podpinania siê pod sygna³ dccFinished() (chilek)
