kasujemy pusty wiersz przy nowej linii w chacie
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@1879 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/ChangeLog
+++ b/ChangeLog
@@ -156,6 +156,8 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
   uaktualniany panel informacyjny (michal)
 * dalsze porz±dki w przekazywaniu parametrów funkcji gg_login(...) (chilek)
 * nie wysy³amy dwóch zmian statusu przy statusie opisowym (chilek)
+* nie wy¶wietla siê ju¿ pusty wiersz w oknie chatu przy przechodzeniu 
+  do nowej linii (joi)
 
 +++ wersja 0.3.7 (03.02.2004)
 * poprawka podpinania siê pod sygna³ dccFinished() (chilek)
