konfiguracjia modulow +dialog
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@1882 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/ChangeLog
+++ b/ChangeLog
@@ -159,6 +159,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * nie wy¶wietla siê ju¿ pusty wiersz w oknie chatu przy przechodzeniu 
   do nowej linii (joi)
 * drobne porz±dki przy htmlu (joi)
+* dodano opcje konfiguracji modu³ów do skryptu Instaluj z wykorzystaniem programu dialog. (Ron_K/Sad Mephisto)
 
 +++ wersja 0.3.7 (03.02.2004)
 * poprawka podpinania siê pod sygna³ dccFinished() (chilek)
