--- a/ChangeLog
+++ b/ChangeLog
@@ -160,6 +160,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
   do nowej linii (joi)
 * drobne porz±dki przy htmlu (joi)
 * dodano opcje konfiguracji modu³ów do skryptu Instaluj z wykorzystaniem programu dialog. (Ron_K/Sad Mephisto)
+* poprawka odtwarzania d¼wiêków przez modu³y (joi)
 
 +++ wersja 0.3.7 (03.02.2004)
 * poprawka podpinania siê pod sygna³ dccFinished() (chilek)
