--- a/ChangeLog
+++ b/ChangeLog
@@ -162,7 +162,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * dodano opcje konfiguracji modu³ów do skryptu Instaluj z wykorzystaniem programu dialog. (Ron_K/Sad Mephisto)
 * poprawka odtwarzania d¼wiêków przez modu³y (joi)
 * wlasne informacje w panelu informacyjnym sa pokazywane prawidlowo (michal)
-* Opcja niezapisywania zmian statusow do histori (Ron_K/joi)
+* opcja niezapisywania zmian statusow do historii (Ron_K/joi)
 * male porzadki w config dialog-u (michal)
 
 +++ wersja 0.3.7 (03.02.2004)
