obsługa wywrotek i prób uruchomienia 2 kadu na jednym profilu
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@1902 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/ChangeLog
+++ b/ChangeLog
@@ -171,6 +171,8 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * lista modu³ów statycznych w menad¿erze modu³ów (adrian)
 * obs³uga funkcji init i close modu³ów statycznych (adrian)
 * konfiguracja timera w autoaway'u (joi)
+* tylko jedno Kadu mo¿e korzystaæ z profilu (joi)
+* zapisywanie pliku konfiguracyjnego w przypadku wywrotki (joi)
 
 +++ wersja 0.3.7 (03.02.2004)
 * poprawka podpinania siê pod sygna³ dccFinished() (chilek)
