obsługa SIGINT i SIGTERM
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@1904 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/ChangeLog
+++ b/ChangeLog
@@ -173,6 +173,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * konfiguracja timera w autoaway'u (joi)
 * tylko jedno Kadu mo¿e korzystaæ z profilu (joi)
 * zapisywanie pliku konfiguracyjnego w przypadku wywrotki (joi)
+* zapis tak¿e przy standardowych sygna³ach zakoñczenia procesu (SIGINT,SIGTERM) (joi)
 
 +++ wersja 0.3.7 (03.02.2004)
 * poprawka podpinania siê pod sygna³ dccFinished() (chilek)
