--- a/ChangeLog
+++ b/ChangeLog
@@ -174,6 +174,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * tylko jedno Kadu mo¿e korzystaæ z profilu (joi)
 * zapisywanie pliku konfiguracyjnego w przypadku wywrotki (joi)
 * zapis tak¿e przy standardowych sygna³ach zakoñczenia procesu (SIGINT,SIGTERM) (joi)
+* instalacja i u¿ycie plików translacji statycznych modu³ów (adrian)
 
 +++ wersja 0.3.7 (03.02.2004)
 * poprawka podpinania siê pod sygna³ dccFinished() (chilek)
