poprawka podpinania sie pod sygnaly
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@1910 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/ChangeLog
+++ b/ChangeLog
@@ -175,6 +175,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * zapisywanie pliku konfiguracyjnego w przypadku wywrotki (joi)
 * zapis tak¿e przy standardowych sygna³ach zakoñczenia procesu (SIGINT,SIGTERM) (joi)
 * instalacja i u¿ycie plików translacji statycznych modu³ów (adrian)
+* kadu podpina sie pod sygnaly tylko gdy jest skompilowane bez debuga (michal)
 
 +++ wersja 0.3.7 (03.02.2004)
 * poprawka podpinania siê pod sygna³ dccFinished() (chilek)
