kadu się nie wywróci przy padnięciu artsa
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@1915 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/ChangeLog
+++ b/ChangeLog
@@ -177,6 +177,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * instalacja i u¿ycie plików translacji statycznych modu³ów (adrian)
 * kadu podpina sie pod sygnaly tylko gdy jest skompilowane bez debuga (michal)
 * dodana kontrola g³o¶no¶ci w module nas_sound (joi)
+* je¿eli wywróci siê demon arts to Kadu siê tym nie przejmie ;) (joi)
 
 +++ wersja 0.3.7 (03.02.2004)
 * poprawka podpinania siê pod sygna³ dccFinished() (chilek)
