przycisk "zastosuj" w konfiguracji
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@1916 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/ChangeLog
+++ b/ChangeLog
@@ -178,6 +178,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * kadu podpina sie pod sygnaly tylko gdy jest skompilowane bez debuga (michal)
 * dodana kontrola g³o¶no¶ci w module nas_sound (joi)
 * je¿eli wywróci siê demon arts to Kadu siê tym nie przejmie ;) (joi)
+* przycisk "Zastosuj" w konfiguracji (joi)
 
 +++ wersja 0.3.7 (03.02.2004)
 * poprawka podpinania siê pod sygna³ dccFinished() (chilek)
