--- a/ChangeLog
+++ b/ChangeLog
@@ -179,6 +179,8 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * dodana kontrola g³o¶no¶ci w module nas_sound (joi)
 * je¿eli wywróci siê demon arts to Kadu siê tym nie przejmie ;) (joi)
 * przycisk "Zastosuj" w konfiguracji (joi)
+* nie zwalniamy loginparams.client_version po wywo³aniu gg_login(...) - jest zarezerwowane
+  na sta³e (chilek)
 * klikniecie srodkowym przyciskiem myszy na dymek nowej rozmowy otwiera
   okno chat-a (michal)
 
