--- a/ChangeLog
+++ b/ChangeLog
@@ -183,6 +183,8 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
   na sta³e (chilek)
 * klikniecie srodkowym przyciskiem myszy na dymek nowej rozmowy otwiera
   okno chat-a (michal)
+* wyodrêbnienie czê¶ci wspólnej importu listy kontaktów z pliku i z serwera z wykorzystaniem
+  QTextStream (chilek)
 
 +++ wersja 0.3.7 (03.02.2004)
 * poprawka podpinania siê pod sygna³ dccFinished() (chilek)
