konferencja z samym soba NIEMOZLIWA
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@1926 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/ChangeLog
+++ b/ChangeLog
@@ -190,6 +190,8 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
   i ColorSelectorem, nadal gdzie¶ tam jest wyciek pamiêci :( (joi)
 * klikniecie na dymek w przypadku konferencji otwiera okno konferencji nie
   chat z osoba ktora ja rozpoczela (michal)
+* usuniety blad pozwalajacy na konferencje z samym soba jesli pierwsza osoba w
+  konferencji jest na liscie ponad wlasnym numerem w userbox-ie (michal)
 
 +++ wersja 0.3.7 (03.02.2004)
 * poprawka podpinania siê pod sygna³ dccFinished() (chilek)
