plik desc modułów
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@1930 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/ChangeLog
+++ b/ChangeLog
@@ -196,6 +196,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * usuwanie zbêdnych <p dir="ltr"> z chatu (joi)
 * przyspieszenie (x2) dzia³ania obs³ugi plików konfiguracyjnych + optymalizacje
   (w ró¿nych miejscach kodu) dotycz±ce obs³ugi pliku konfiguracyjnego (joi)
+* opis modu³ów w plikach desc zamiast w funkcjach *_info (adrian)
 
 +++ wersja 0.3.7 (03.02.2004)
 * poprawka podpinania siê pod sygna³ dccFinished() (chilek)
