prace przy modulach
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@1935 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/ChangeLog
+++ b/ChangeLog
@@ -201,6 +201,9 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
   bledzie (michal)
 * usuniêty wyciek pamiêci z modu³u encryption, usuniêty wyciek przy wysy³aniu listy
   kontaktów, poprawiony b³±d wy¶wietlania w³asnego opisu dla kontaktów tylko z komórk± (joi)
+* przy sprawdzaniu zale¿no¶ci i blokady powtórnego uruchamiania modu³u
+  uwzglêdniane s± modu³y wkompilowane statycznie w kadu (adrian)
+* problem z kompilacj± modu³u powoduje przerwanie procesu budowania kadu (adrian)
 
 +++ wersja 0.3.7 (03.02.2004)
 * poprawka podpinania siê pod sygna³ dccFinished() (chilek)
