autoaway do modułu + porządki
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@1949 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/ChangeLog
+++ b/ChangeLog
@@ -210,6 +210,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * opisy modulow w plikach .desc moga byc wielojezyczne (michal)
 * metody moduleIncUsageCount i moduleDecUsageCount w ModulesManager (michal)
 * bramka ery obsuguje siec hejah (owczi/michal)
+* autoaway do modu³u (+trochê porz±dków) (joi)
 
 +++ wersja 0.3.7 (03.02.2004)
 * poprawka podpinania siê pod sygna³ dccFinished() (chilek)
