--- a/ChangeLog
+++ b/ChangeLog
@@ -211,6 +211,8 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * metody moduleIncUsageCount i moduleDecUsageCount w ModulesManager (michal)
 * bramka ery obsuguje siec hejah (owczi/michal)
 * autoaway do modu³u (+trochê porz±dków) (joi)
+* poprawki w modulach sms (michal)
+* porzadki w config-dialogu (michal)
 
 +++ wersja 0.3.7 (03.02.2004)
 * poprawka podpinania siê pod sygna³ dccFinished() (chilek)
