prace przy statycznych modulach
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@1964 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/ChangeLog
+++ b/ChangeLog
@@ -215,6 +215,8 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * porzadki w config-dialogu (michal)
 * je¶li ³adowanie/inicjalizacja modu³u zawiedzie to nie zwiêkszamy licznika
   u¿ycia modu³ów wystêpuj±cych w zale¿no¶ciach (adrian)
+* configure nie generuje bezpo¶rednio kodu wywo³añ funkcji init i close modu³ów
+  statycznych, tylko kod wype³niaj±cy tablicê StaticModules (adrian)
 
 +++ wersja 0.3.7 (03.02.2004)
 * poprawka podpinania siê pod sygna³ dccFinished() (chilek)
